--- a/travel.html
+++ b/travel.html
@@ -10,7 +10,8 @@ todate<date>setdate</date>
 travel destinations <list>ahmedabad.bangalore.mumbai.delhi.chennai.kolkata</list>
 <button>recommendations</button>
 <script = “javascript'>
-
+function myFunction() {
+    document.getElementById("hello").innerHTML = "show recommended results";
 </script>
 fares and expenses
 
