--- a/travel.html
+++ b/travel.html
@@ -7,7 +7,7 @@ destination<text><listview>banglore.mumbai.delhi</listview></text>
 startdate<date>setdate</date>
 todate<date>setdate</date>
 <a href=”a.png” height= “100” width= “100”></a>
-travel destinations <list>ahmedabad.bangalore.mumbai.delhi.chennai.kolkata</list>
+travel destinations <script="javascript"><list>ahmedabad.bangalore.mumbai.delhi.chennai.kolkata</list></script>
 <button>recommendations</button>
 <script = “javascript'>
 function myFunction() {
